[package]
name = "shell-prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1"
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nix = "0.23"
getopts = "0.2"
rand = "0.8"
